Fixed descender of letter sbeing cut off in article-card header

--- a/frontend/src/app/article-card/article-card.component.scss
+++ b/frontend/src/app/article-card/article-card.component.scss
@@ -66,11 +66,12 @@
   }
 
   .article-header {
-    margin-bottom: 24px;
+    margin-bottom: 8px;
     color: var(--color-text);
     position: relative;
     min-width: 0;
     padding-left: 8px;
+    padding: 8px 8px 8px;
 
 
     .header-wrapper {
